--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+.ipynb_checkpoints/creditcard-checkpoint.csv filter=lfs diff=lfs merge=lfs -text
+creditcard.csv filter=lfs diff=lfs merge=lfs -text
