--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 .ipynb_checkpoints/creditcard-checkpoint.csv filter=lfs diff=lfs merge=lfs -text
 creditcard.csv filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
