--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/creditcard-checkpoint.csv filter=lfs diff=lfs merge=lfs -text
 creditcard.csv filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.csv.gz filter=lfs diff=lfs merge=lfs -text
